# hat

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
hatlib/: CMakeLists.txt.in  README.md  __init__.py  arg_info.py  arg_value.py  benchmark_hat_package.py  callable_func.py  cuda_loader.py  function_info.py  gpu_headers.py  hat.py  hat_file.py  hat_package.py  hat_to_dynamic.py  hat_to_lib.py  host_loader.py  platform_utilities.py  pyhip_hip.py  pyhip_hiprtc.py  requirements.txt  rocm_loader.py  verify_hat_package.py
hatlib/pyhip/: hip.py  hiprtc.py
hatlib/test/: test_benchmark_hat_package.py  test_hat.py  test_hat_file.py  test_hat_package.py
libraries/hat/scripts/: hat_file.py  hat_package.py
samples/: sample_gemm_library.hat  sample_range_library.hat
schema/: hat.tosd
test/: .gitignore  requirements.txt  test_benchmark_hat_package.py  test_create_simple_hat_file.py  test_hat.py  test_hat_file.py  test_hat_package.py  test_verify_hat.py
tools/: README.md  __init__.py  benchmark_hat_package.py  hat.py  hat_file.py  hat_loader.py  hat_package.py  hat_to_dynamic.py  hat_to_lib.py  platform_utilities.py  requirements.txt
tools/test/: requirements.txt  test_benchmark_hat_package.py  test_hat.py  test_hat_file.py  test_hat_package.py
tools/test/data/linux/: optimized_matmul.hat
tools/test/data/windows/: optimized_matmul.hat
