[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.yapf]
allow_multiline_dictionary_keys = false
allow_split_before_dict_value = true
based_on_style = "pep8"
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true
each_dict_entry_on_separate_line = true
force_multiline_dict = true
indent_dictionary_value = true
spaces_before_comment = 4
split_before_first_argument = true
split_before_logical_operator = true

[tool.pydocstyle]
max-line-length = 120
