[metadata]
name = hat-lib
version = 0.0.1
author = Microsoft Research AI Compilers Team
author_email = mlodev@microsoft.com
summary = Tools for HAT (Header Annotated with TOML) packages
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = hatlib
python_requires = ~=3.7
install_requires =
    numpy
    pandas
    toml
    tomlkit
package_dir =
    hatlib = tools

[options.entry_points]
console_scripts =
    hatlib.benchmark_hat = hatlib.benchmark_hat_package:main_command
    hatlib.hat_to_dynamic = hatlib.hat_to_dynamic:main
