[metadata]
name = hatlib
author = Microsoft Research AI Compilers Team
author_email = mlodev@microsoft.com
summary = Tools for HAT (Header Annotated with TOML) packages
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = hatlib
python_requires = ~=3.7
install_requires =
    numpy
    pandas
    toml
    tomlkit
    vswhere; sys_platform == "win32"
package_dir =
    hatlib = hatlib

[options.entry_points]
console_scripts =
    hatlib.benchmark_hat = hatlib.benchmark_hat_package:main_command
    hatlib.hat_to_dynamic = hatlib.hat_to_dynamic:main
    hatlib.verify_hat = hatlib.verify_hat_package:main

[pycodestyle]
max-line-length = 120

[yapf]
allow_multiline_dictionary_keys = false
allow_split_before_dict_value = true
based_on_style = pep8
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true
each_dict_entry_on_separate_line = true
force_multiline_dict = true
indent_dictionary_value = true
spaces_before_comment = 4
split_before_first_argument = true
split_before_logical_operator = true
