[metadata]
name = hatlib
author = Microsoft Research AI Compilers Team
author_email = mlodev@microsoft.com
summary = Tools for HAT (Header Annotated with TOML) packages
url = https://www.github.com/microsoft/hat
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = ~=3.7
install_requires =
    numpy
    pandas
    toml
    tomlkit
    vswhere; sys_platform == "win32"
package_dir =
    hatlib = hatlib
packages = find:

[options.package_data]
hatlib = *.in

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    hatlib.benchmark_hat = hatlib.benchmark_hat_package:main_command
    hatlib.hat_to_dynamic = hatlib.hat_to_dynamic:main
    hatlib.verify_hat = hatlib.verify_hat_package:main

[pycodestyle]
max-line-length = 120
